# riptide

./: CHANGES.txt  LICENSE  LICENSE.txt  MANIFEST  README.md  README.rst  README.txt  pyproject.toml  riptide.py  setup.py
RIPTiDE.egg-info/: PKG-INFO  SOURCES.txt
examples/: defined.tsv  transcriptome.tsv  transcriptome1.tsv  transcriptome2.tsv
examples/example_output/: flux_minimization_coefficients.tsv  flux_samples.tsv  parameters.txt
riptide/: __init__.py  gapsplit.py  riptide.py
riptide.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: riptide.py
src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/riptide.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: genre.sbml  transcriptome1.tsv  transcriptome2.tsv
tests/example_output/: flux_maximization_coefficients.tsv  flux_variability.tsv  model.sbml  pruned_components.tsv
