[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riptide"
version = "3.4.19"
authors = [
  { name="Matthew Jenior", email="mattjenior@gmail.com" },
]
description = "Reaction Inclusion by Parsimony and Transcript Distribution (RIPTiDe)"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependencies]
cobra = "0.25.0"
symengine = "0.9.2"
scipy = "1.9.3"

[project.urls]
"Homepage" = "https://github.com/mjenior/riptide"
"Bug Tracker" = "https://github.com/mjenior/riptide/issues"